# cfs-routes

./: .env.example  .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_drop_fir_sections.py  0003_add_pdf_data.py  0004_mediumblob_pdf_data.py
cfs_routes/: airac.py  airports.py  config.py  database.py  fetcher.py  ingest.py  main.py  models.py  parser.py  scheduler.py
cfs_routes/api/: routes.py  schemas.py
cfs_routes/web/: views.py
cfs_routes/web/static/css/: main.css
cfs_routes/web/static/help/: help.html
cfs_routes/web/static/i18n/: en.json  fr.json
cfs_routes/web/static/js/: help.js  i18n.js  index.js  shortcuts.js
cfs_routes/web/templates/: index.html
data/: airports.csv
